src/test/deca/context/valid/provided/hello-phelma.deca

{int x = 2;
x = 5;
int y = readfloat();
}

/*  Commentaire  */
