src/test/deca/context/invalid/provided/double-decalre.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: variable already defined
{int x = 2;
int x = 4 ;
}

